--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -9,9 +9,13 @@
 .nav-links a {
     margin-left: 1rem;
     text-decoration: none;
-    color: #00796b;
+    color: #7fde92;
 }
 
 .main-title {
-    color: green;
+    color: #7fde92;
+}
+
+.logout_btn {
+    border-radius: 10px;
 }
