--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,76 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poetsen+One&display=swap');
+
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    interpolate-size: allow-keywords;
+  }
+}
+
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+
+p {
+  text-wrap: pretty;
+}
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+#root, #__next {
+  isolation: isolate;
+}
+
+
+:root {
+  --primary-green-color: #7FDE92;
+  --secondary-green-color: #458d7c;
+  --terciary-green-color: #349b76;
+  --primary-purple-color: #34365C;
+  --btn-green-color: #66c484;
+  --bg-white-color: #F5F5F5;
+  --font-main: "Inter", sans-serif;
+  --font-title: "Poetsen One", sans-serif;
+
+  --shadow-color: 65deg 38% 52%;
+  --shadow-elevation-low:
+    0.3px 0.6px 0.8px hsl(var(--shadow-color) / 0.34),
+    0.4px 1px 1.2px -1.2px hsl(var(--shadow-color) / 0.34),
+    1px 2.5px 3px -2.5px hsl(var(--shadow-color) / 0.34);
+  --shadow-elevation-medium:
+    0.3px 0.6px 0.8px hsl(var(--shadow-color) / 0.36),
+    0.8px 2.1px 2.5px -0.8px hsl(var(--shadow-color) / 0.36),
+    2.1px 5.2px 6.3px -1.7px hsl(var(--shadow-color) / 0.36),
+    5px 12.6px 15.3px -2.5px hsl(var(--shadow-color) / 0.36);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,11 +78,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--bg-white-color);
+  min-height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, #root, .app-layout {
+  height: 100vh;
+  min-height: 100vh;
 }
 
 a {
@@ -18,4 +93,15 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+h1, h2 {
+  font-family: var(--font-title);
+  text-align: center;
+  font-size: 1.6rem;
+}
+
+p {
+  font-family: var(--font-main);
+  font-size: 1.1rem;
 }
