--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
 :root {
   --primary-green-color: #7FDE92;
   --secondary-green-color: #458d7c;
-  --terciary-green-color: #349b76;
+  --terciary-green-color: #349b76;;
   --primary-purple-color: #34365C;
   --btn-green-color: #66c484;
   --bg-white-color: #F5F5F5;
@@ -105,3 +105,11 @@ p {
   font-family: var(--font-main);
   font-size: 1.1rem;
 }
+
+audio {
+  margin: 1rem 0;
+  width: 100%;
+  border-radius: 25px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
+}
+
