--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -63,3 +63,20 @@
     background-color: #f2ecff;
     /* Light lavender purple */
 }
+
+.app-title {
+    font-family: var(--font-title);
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 0.5rem;
+    color: var(--primary-purple-color);
+    padding-top: 2rem;
+}
+
+.app-tagline {
+    font-family: var(--font-main);
+    font-size: 1rem;
+    text-align: center;
+    margin-bottom: 2rem;
+
+}
