--- a/src/styles/WordDetailPage.css
+++ b/src/styles/WordDetailPage.css
@@ -8,7 +8,7 @@
 }
 
 .word-detail {
-    background-color: rgb(255, 253, 253);
+    background-color: rgba(255, 253, 253, 0.587);
     margin: 2rem auto 0 auto;
     border-radius: 20px;
     padding: 20px;
@@ -18,7 +18,7 @@
     overflow-y: scroll;
 }
 
-.word-detail h1 {
+.word-detail-title {
     text-align: center;
     font-size: 1.8rem;
     margin-bottom: 4px;
@@ -34,8 +34,8 @@
     font-size: 1rem;
 }
 
-.word-detail h2 {
-    font-size: 1rem;
+.word-detail-subtitle {
+    font-size: 1.0rem;
     border-bottom: 1px solid #ccc;
     padding-bottom: 5px;
     text-align: left;
@@ -44,19 +44,19 @@
     color: var(--primary-purple-color);
 }
 
-.word-detail ul {
+.word-definitions {
     padding-left: 18px;
     margin: 0;
 }
 
-.word-detail li {
+.word-definitions li {
     margin-bottom: 10px;
     font-size: 14px;
     display: flex;
     flex-direction: column;
 }
 
-.word-detail em {
+.word-definitions em {
     color: #555;
     margin-top: 4px;
     font-style: italic;
@@ -70,7 +70,7 @@
     font-size: .9rem;
 }
 
-.word-detail button {
+.delete-button {
     margin-top: 16px;
     width: 100%;
     padding: 12px 20px;
@@ -84,6 +84,6 @@
     transition: background-color 0.3s ease;
 }
 
-.word-detail button:hover {
+.delete-button:hover {
     background-color: #34365c;
 }
