--- a/src/styles/WordListPage.css
+++ b/src/styles/WordListPage.css
@@ -1,33 +1,3 @@
-/* .word-list-container {
-    padding: 20px;
-}
-
-.word-list-title {
-    text-align: center;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
-    font-size: 28px;
-    margin-bottom: 20px;
-}
-
-.word-list-items {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.word-list-item {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;
-    font-size: 18px;
-    font-weight: 500;
-}
-
-.word-list-icon {
-    margin-right: 10px;
-} */
-
 .word-list-container {
     padding: 20px;
     font-family: 'Comic Sans MS', cursive, sans-serif;
@@ -66,5 +36,19 @@
 }
 
 .word-link:hover {
+    text-decoration: underline;
+}
+
+.word-link {
+    color: #6a1b9a;
+    /* deep purple, change if you like */
+    text-decoration: none;
+    font-weight: bold;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+}
+
+.word-link:hover {
+    color: #4a148c;
+    /* darker purple on hover */
     text-decoration: underline;
 }
