--- a/src/styles/WordListPage.css
+++ b/src/styles/WordListPage.css
@@ -59,3 +59,18 @@
     /* green outline */
     transform: scale(1.005);
 }
+
+.word-link {
+    color: var(--primary-purple-color) !important;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.word-link:hover,
+.word-link:focus,
+.word-link:active,
+.word-link:visited {
+    color: var(--primary-purple-color) !important;
+    text-decoration: none;
+}
