--- a/src/styles/WordResultCard.css
+++ b/src/styles/WordResultCard.css
@@ -1,12 +1,23 @@
 .word-card {
-    /* background: linear-gradient(to bottom, #eaffea, #c2f7c2); */
     background: linear-gradient(0deg,rgba(167, 235, 184, 0.85) 0%, rgba(220, 247, 227, 1) 26%, rgba(255, 255, 255, 0.86) 100%);
     border-radius: 20px;
-    padding: 20px;
+    padding: 20px 0;
     margin: 20px auto;
-    max-width: 90%;
-    max-height: 80vh;
-    overflow-y: scroll;
+    max-width: 95%;
+    box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+
+.word-card-header {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: #ffffff;
+    padding-bottom: 10px;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+}
+
+.word-card-main {
+    padding: 1rem;
 }
 
 .tag-dropdown-container {
