--- a/src/index.css
+++ b/src/index.css
@@ -153,10 +153,12 @@ audio {
     z-index: 1000;
     height: 8vh;
     position: fixed;
+    box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
 }
 
 .protected-main {
-  background-image: url('../assets/bg_word_detail.png');
+  /* background-image: url('../assets/bg_word_detail.png'); */
+  background-image: url('../assets/bg_protected_main.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -177,4 +179,20 @@ audio {
 .protected-main:active::-webkit-scrollbar,
 .protected-main:focus::-webkit-scrollbar {
   opacity: 1;
+}
+
+@media (min-width: 768px) {
+    .navbar {
+        height: 9vh;
+    }
+
+    .protected-main {
+        padding: 9vh 2rem 2rem 2rem; /* Adjust for larger Navbar */
+    }
+}   
+
+@media (min-width: 1024px) {
+    .navbar {
+        padding: 1.5rem 3rem;
+    }
 }
