--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -7,14 +7,14 @@
 .bottom-buttons {
     display: flex;
     justify-content: space-around;
-    width: 80%;
+    width: 85%;
 }
 
 .action-button {
-    width: 130px;
-    height: 150px;
-    margin: 0;
-    background-color: #f4fff9;
+    width: 8.5rem;
+    height: 9rem;
+    margin-top: 3rem;
+    background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%);
     border: 1px solid var(--primary-purple-color);
     border-radius: 20px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
@@ -23,39 +23,41 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    transition: all 0.2s ease-in-out;
     font-family: var(--font-main);
-
-}
-
-.action-button span {
-    font-size: 0.8rem;
-    color: var(--primary-purple-color);
-    text-align: center;
+    font-weight: 500;
+    transition: all 0.4s ease-in-out;
+    cursor: pointer;
 }
 
 .action-button:hover {
-    background-color: var(--hover-purple-color);
-    transform: translateY(-2px);
+    background: linear-gradient(0deg,rgba(250, 252, 252, 1) 0%, rgba(227, 254, 245, 1) 100%);;
+    transform: translateY(-3px);
     font-weight: bold;
     color: var(--primary-purple-color);
 }
 
+.action-button span {
+    font-size: .9rem;
+    color: var(--primary-purple-color);
+    text-align: center;
+}
+
 .action-button img {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
 .icon-circle {
-    width: 75px;
-    height: 75px;
+    width: 5rem;
+    height: 5rem;
     background-color: var(--mint-green-color);
     border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 12px;
+    margin-bottom: 1rem;
 }
 
 .icon-circle img {
@@ -78,4 +80,44 @@
     font-size: 1rem;
     text-align: center;
     margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+    .app-title{
+        padding-top: 4rem;
+    }
+
+    .bottom-buttons {
+        width: 50%;
+    }
+
+    .action-button {
+        width: 10rem;
+        height: 11rem;
+        transition: box-shadow 0.3s;
+    }
+    .action-button:hover {
+        box-shadow:
+            0 0 10px 2px rgba(175, 235, 187, 0.8),
+            0 2px 8px 0 rgba(44, 62, 80, 0.10);
+    }
+
+    .icon-circle {
+        width: 5.5rem;
+        height: 5.5rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .app-tagline {
+        margin-bottom: 3rem;
+    }
+
+    .bottom-buttons {
+        width: 35%;
+    }
+
+    .action-button span {
+        font-size: 1rem;
+    }
 }
