--- a/src/styles/TagDropdown.css
+++ b/src/styles/TagDropdown.css
@@ -5,15 +5,17 @@
 }
 
 .dropdown-toggle {
-    padding: 10px;
+    padding: 12px 20px;
     background-color: var(--bg-white-color);
-    border-radius: 10px;
+    border-radius: 30px;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    transition: all 0.3s ease;
 }
+
 
 .dropdown-list {
     width: 100%;
@@ -21,14 +23,16 @@
     padding: 0;
     background-color: white;
     border: 1px solid #ccc;
-    border-radius: 10px;
+    border-radius: 30px;
     z-index: 100;
+    margin-top: 2px;
 }
 
 .dropdown-item {
-    padding: 10px;
+    padding: 12px 20px;
     cursor: pointer;
     background-color: white;
+    border-radius: 30px;
 }
 
 .dropdown-item:hover {
@@ -73,4 +77,10 @@
 .save-tag-button:hover {
     background-color: var(--primary-purple-color);
     color: var(--primary-green-color);
+}
+
+@media (min-width: 768px) {
+    .dropdown-toggle:hover {
+        transform: scale(1.02);
+    }
 }
