--- a/src/styles/WordDetailPage.css
+++ b/src/styles/WordDetailPage.css
@@ -62,7 +62,7 @@
 }
 
 .delete-button {
-    margin-top: 16px;
+    /* margin-top: 16px; */
     width: 100%;
     padding: 12px 20px;
     border-radius: 30px;
