--- a/src/styles/WordResultCard.css
+++ b/src/styles/WordResultCard.css
@@ -25,7 +25,7 @@
 }
 
 .word-detail-button {
-    margin-top: 16px;
+    /* margin-top: 16px; */
     width: 100%;
     padding: 12px 20px;
     border-radius: 30px;
@@ -42,4 +42,23 @@
 .word-detail-button:hover {
     background-color: #34365c;
     transform: scale(1.02);
+}
+
+@media (min-width: 768px) {
+    .word-card {
+        max-width: 80%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .word-card {
+        max-width: 70%;
+    }
+    .word-card-buttons {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        margin-top: 16px;
+        gap: 2rem;
+    }
 }
