--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -14,8 +14,9 @@
     width: 8.5rem;
     height: 9rem;
     margin-top: 3rem;
-    background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%);
-    border: 1px solid var(--primary-purple-color);
+    /* background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%); */
+    background-color: var(--primary-purple-color);
+    /* border: 1px solid var(--primary-purple-color); */
     border-radius: 20px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -30,17 +31,18 @@
 }
 
 .action-button:hover {
-    background: linear-gradient(0deg,rgba(250, 252, 252, 1) 0%, rgba(227, 254, 245, 1) 100%);;
     transform: translateY(-3px);
     font-weight: bold;
     color: var(--primary-purple-color);
+    box-shadow: 0 0 14px 4px rgba(175, 235, 187, 0.8), 0 3px 9px 0 rgba(44, 62, 80, 0.10);
 }
 
 .action-button span {
     font-size: .9rem;
-    color: var(--primary-purple-color);
+    color: var(--primary-green-color);
     text-align: center;
 }
+
 
 .action-button img {
     width: 100%;
@@ -98,8 +100,8 @@
     }
     .action-button:hover {
         box-shadow:
-            0 0 10px 2px rgba(175, 235, 187, 0.8),
-            0 2px 8px 0 rgba(44, 62, 80, 0.10);
+            0 0 14px 4px rgba(175, 235, 187, 0.8),
+            0 3px 9px 0 rgba(44, 62, 80, 0.10);
     }
 
     .icon-circle {
