Refactor HomePage and SearchBar styles: update action button styles and enhance search bar input shadow effects

--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -11,6 +11,7 @@
     border-radius: 8px;
     border: 1px solid #ccc;
     width: 230px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .search-bar input:focus {
