--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -10,13 +10,12 @@
     width: 85%;
 }
 
-.action-button {
+/* .action-button {
     width: 8.5rem;
     height: 9rem;
     margin-top: 3rem;
-    /* background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%); */
-    background-color: var(--primary-purple-color);
-    /* border: 1px solid var(--primary-purple-color); */
+    background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%);
+    border: 1px solid #ccc;
     border-radius: 20px;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -28,18 +27,43 @@
     font-weight: 500;
     transition: all 0.4s ease-in-out;
     cursor: pointer;
+} */
+
+.action-button {
+    width: 8.5rem;
+    height: 9rem;
+    margin-top: 3rem;
+    background-color: transparent;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: var(--font-main);
+    font-weight: 600;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    transition: all 0.5s ease;
 }
 
 .action-button:hover {
-    transform: translateY(-3px);
+    transform: scale(1.03);
     font-weight: bold;
     color: var(--primary-purple-color);
-    box-shadow: 0 0 14px 4px rgba(175, 235, 187, 0.8), 0 3px 9px 0 rgba(44, 62, 80, 0.10);
+    background-color: white;
+    /* box-shadow: 0 0 14px 4px rgba(175, 235, 187, 0.8), 0 3px 9px 0 rgba(44, 62, 80, 0.10); */
+    border-color: #4caf50;
+    box-shadow: rgba(76, 175, 80, 0.2) 0px 0px 0px 2px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
+    /* box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.2); */
+
 }
 
 .action-button span {
     font-size: .9rem;
-    color: var(--primary-green-color);
+    /* color: var(--primary-green-color); */
+    color: var(--primary-purple-color);
     text-align: center;
 }
 
@@ -55,11 +79,11 @@
     height: 5rem;
     background-color: var(--mint-green-color);
     border-radius: 50%;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
+    box-shadow: rgba(14, 63, 126, 0.04) 0px 0px 0px 1px, rgba(42, 51, 69, 0.04) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.04) 0px 6px 6px -3px, rgba(14, 63, 126, 0.04) 0px 12px 12px -6px, rgba(14, 63, 126, 0.04) 0px 24px 24px -12px;
 }
 
 .icon-circle img {
@@ -89,6 +113,11 @@
         padding-top: 4rem;
     }
 
+    .app-tagline {
+        font-size: 1.2rem;
+        margin-bottom: 3rem;
+    }
+
     .bottom-buttons {
         width: 50%;
     }
@@ -98,11 +127,11 @@
         height: 11rem;
         transition: box-shadow 0.3s;
     }
-    .action-button:hover {
+    /* .action-button:hover {
         box-shadow:
             0 0 14px 4px rgba(175, 235, 187, 0.8),
             0 3px 9px 0 rgba(44, 62, 80, 0.10);
-    }
+    } */
 
     .icon-circle {
         width: 5.5rem;
