--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,3 +1,21 @@
+.create-personal-word-btn {
+    background-color: #f9f9f9;
+    color: var(--primary-purple-color);
+    border-radius: 20px;
+    padding: 10px 20px;
+    border: 1px solid var(--primary-purple-color);
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+    font-family: var(--font-main);
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.create-personal-word-btn:hover {
+    background-color: var(--mint-green-color);
+    transform: scale(1.03);
+}
+
 .button-wrapper {
     display: flex;
     justify-content: center;
@@ -9,25 +27,6 @@
     justify-content: space-around;
     width: 85%;
 }
-
-/* .action-button {
-    width: 8.5rem;
-    height: 9rem;
-    margin-top: 3rem;
-    background: linear-gradient(0deg, rgba(227, 255, 244, 1) 0%, rgba(250, 252, 252, 1) 100%);
-    border: 1px solid #ccc;
-    border-radius: 20px;
-    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: var(--font-main);
-    font-weight: 500;
-    transition: all 0.4s ease-in-out;
-    cursor: pointer;
-} */
 
 .action-button {
     width: 8.5rem;
