Enhance SearchBar component with improved layout and input styling, fix width and inify input with search icon

--- a/src/styles/SearchBar.css
+++ b/src/styles/SearchBar.css
@@ -2,24 +2,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
     margin: 20px auto;
+    width: 80%;
+    border: 1px solid #ccc;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.search-bar:hover {
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 15px -3px, rgba(0, 0, 0, 0.1) 0px 4px 6px -2px;
+    border-color: #4caf50;
 }
 
 .search-bar input {
     padding: 10px;
+    width: 80%;
     border-radius: 8px;
-    border: 1px solid #ccc;
-    width: 230px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    border: none;
+    width: 90%;
 }
 
 .search-bar input:focus {
     outline: none;
     border-color: #4caf50;
-    /* green */
     box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.2);
-    /* optional glow */
 }
 
 .search-bar button {
@@ -27,4 +34,18 @@
     border: none;
     font-size: 20px;
     cursor: pointer;
+    border-left: 1px solid #ccc;
+    width: 10%;
+}
+
+@media (min-width: 768px) {
+    .search-bar {
+        width: 60%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .search-bar {
+        width: 50%;
+    }
 }
