--- a/src/styles/WordResultCard.css
+++ b/src/styles/WordResultCard.css
@@ -1,7 +1,7 @@
 .word-card {
     background: linear-gradient(0deg,rgba(167, 235, 184, 0.85) 0%, rgba(220, 247, 227, 1) 26%, rgba(255, 255, 255, 0.86) 100%);
     border-radius: 20px;
-    padding: 20px 0;
+    padding: 5px 0;
     margin: 20px auto;
     max-width: 95%;
     box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
@@ -14,6 +14,26 @@
     background-color: #ffffff;
     padding-bottom: 10px;
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.word-card-close-btn {
+    background: transparent;
+    border: none;
+    font-size: 18px;
+    color: #666;
+    cursor: pointer;
+    padding: 4px;
+    align-self: flex-end;
+    margin-right: .5rem;
+    transition: all 0.3s ease;
+}
+
+.word-card-close-btn:hover {
+    color: var(--primary-purple-color);
+    transform: scale(1.1);
 }
 
 .word-card-main {
